--- a/EchoBot.cabal
+++ b/EchoBot.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: c07c96e868b6bd7b2a4a76fb31bcf3c12cf3daf79495c625a8971dc9f2f7e3fd
+-- hash: 0fac71b1caaf8c936550e5dea3b2ab098b953b3d56f51e07d5f0532140b78b56
 
 name:           EchoBot
 version:        0.1.0.0
@@ -32,6 +32,7 @@ executable EchoBot-exe
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , req
   default-language: Haskell2010
 
 test-suite EchoBot-test
@@ -44,4 +45,5 @@ test-suite EchoBot-test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , req
   default-language: Haskell2010
