--- a/package.yaml
+++ b/package.yaml
@@ -11,6 +11,7 @@ extra-source-files:
 
 dependencies:
 - base >= 4.7 && < 5
+- req
 
 
 executables:
@@ -21,7 +22,6 @@ executables:
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
-    #dependencies:
 
 tests:
   EchoBot-test:
@@ -31,4 +31,3 @@ tests:
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
-    #dependencies:
