--- a/EchoBot.cabal
+++ b/EchoBot.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 0fac71b1caaf8c936550e5dea3b2ab098b953b3d56f51e07d5f0532140b78b56
+-- hash: b3aebe62a86bf5985908d50ee6e1aa023eea214b058a1c1b3d69a8c266c59619
 
 name:           EchoBot
 version:        0.1.0.0
@@ -31,7 +31,8 @@ executable EchoBot-exe
       src
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      aeson
+    , base >=4.7 && <5
     , req
   default-language: Haskell2010
 
@@ -44,6 +45,7 @@ test-suite EchoBot-test
       test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      aeson
+    , base >=4.7 && <5
     , req
   default-language: Haskell2010
