--- a/EchoBot.cabal
+++ b/EchoBot.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 5cdb524651ec3317e74b224d9ff1e6b4603243fee4772361c01659c298e900ad
+-- hash: a93f7e959d25106df4cdb9d25cf6bb88f734a0ad5e757dbfb0bc94c24aad7af2
 
 name:           EchoBot
 version:        0.1.0.0
@@ -25,15 +25,20 @@ executable EchoBot-exe
   main-is: Main.hs
   other-modules:
       Config
+      Logger
+      Model
+      Service
+      Telegram
       Paths_EchoBot
   hs-source-dirs:
       src
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       aeson
+    , aeson-casing
     , base >=4.7 && <5
     , bytestring
-    , http-client
+    , http-client >=0.6.1
     , req >=2.0.1
     , text
   default-language: Haskell2010
@@ -48,9 +53,10 @@ test-suite EchoBot-test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       aeson
+    , aeson-casing
     , base >=4.7 && <5
     , bytestring
-    , http-client
+    , http-client >=0.6.1
     , req >=2.0.1
     , text
   default-language: Haskell2010
