--- a/EchoBot.cabal
+++ b/EchoBot.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 1f741a26dec9a9210ccc5c3897634530b1a8db1ac025e4647f07f945db283df7
+-- hash: 3d732d0903b81bf7f09b4cc8b2456f3b3a70e6f7654ae9c4c622d82422586bba
 
 name:           EchoBot
 version:        0.1.0.0
@@ -29,9 +29,13 @@ executable EchoBot-exe
       Logger
       Model
       Telegram.Bot
+      Telegram.Logging
+      Telegram.Requests
       Telegram.Types
-      Transf
-      Types
+      Telegram.Utils
+      VKontakte.Bot
+      VKontakte.Types
+      VKontakte.Utils
       Paths_EchoBot
   hs-source-dirs:
       src
@@ -42,9 +46,8 @@ executable EchoBot-exe
     , base >=4.7 && <5
     , bytestring
     , http-api-data
-    , http-client >=0.6.1
+    , http-conduit
     , mtl
-    , req >=2.0.1
     , text
     , transformers >=0.5.6.2
   default-language: Haskell2010
@@ -63,9 +66,8 @@ test-suite EchoBot-test
     , base >=4.7 && <5
     , bytestring
     , http-api-data
-    , http-client >=0.6.1
+    , http-conduit
     , mtl
-    , req >=2.0.1
     , text
     , transformers >=0.5.6.2
   default-language: Haskell2010
