--- a/package.yaml
+++ b/package.yaml
@@ -10,10 +10,9 @@ extra-source-files:
 
 dependencies:
 - base >= 4.7 && < 5
-- req >= 2.0.1
+- http-conduit
 - aeson
 - text
-- http-client >= 0.6.1
 - bytestring
 - aeson-casing
 - http-api-data
